--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -21,7 +21,7 @@ repos:
       - id: detect-secrets
 
   - repo: https://github.com/returntocorp/semgrep
-    rev: 'v0.45.0'
+    rev: "v0.45.0"
     hooks:
       - id: semgrep
-        args: ['--config', 'p/ci', '--error']
+        args: ["--config", "p/ci", "--error"]
