--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -1,78 +1,60 @@
 ---
-# For most projects, this workflow file will not need changing; you simply need
-# to commit it to your repository.
-#
-# You may wish to alter this file to override the set of languages analyzed,
-# or to provide custom queries or build logic.
-#
-# ******** NOTE ********
-# We have attempted to detect the languages in your repository. Please check
-# the `language` matrix defined below to confirm you have the correct set of
-# supported CodeQL languages.
-#
-name: 'CodeQL'
+name: "CodeQL Advanced"
 
 # yamllint disable-line rule:truthy
 on:
-  workflow_dispatch:
   push:
-    branches: [main]
+    branches: ["main"]
   pull_request:
-    # The branches below must be a subset of the branches above
-    branches: [main]
+    branches: ["main"]
   schedule:
-    - cron: '20 11 * * 1'
+    - cron: "23 23 * * 1"
+  workflow_dispatch:
+
+permissions: read-all
 
 jobs:
   analyze:
-    name: Analyze
-    runs-on: ubuntu-latest
+    name: Analyze (${{ matrix.language }})
+    runs-on: ${{ (matrix.language == 'swift' && 'macos-latest') || 'ubuntu-22.04' }}
     permissions:
+      # required for all workflows
+      security-events: write
+
+      # required to fetch internal or private CodeQL packs
+      packages: read
+
+      # only required for workflows in private repositories
       actions: read
       contents: read
-      security-events: write
 
     strategy:
       fail-fast: false
       matrix:
-        language: ['javascript']
-        # CodeQL supports 'cpp', 'csharp', 'go', 'java', 'javascript', 'python'
-        # Learn more:
-        # https://docs.github.com/en/free-pro-team@latest/github/finding-security-vulnerabilities-and-errors-in-your-code/configuring-code-scanning#changing-the-languages-that-are-analyzed
-
+        include:
+          - language: actions # CodeQL supports the following values keywords for 'language': 'c-cpp', 'csharp', 'go', 'java-kotlin', 'javascript-typescript', 'python', 'ruby', 'swift'
+            build-mode: none
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v2
+        uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # pin@11bd71901bbe5b1630ceea73d27597364c9af683
 
-      # Initializes the CodeQL tools for scanning.
       - name: Initialize CodeQL
-        uses: github/codeql-action/init@v1
+        uses: github/codeql-action/init@5d4e8d1aca955e8d8589aabd499c5cae939e33c7 # pin@v3
         with:
           languages: ${{ matrix.language }}
-          # If you wish to specify custom queries, you can do so here or
-          # in a config file.
-          #
-          # By default, queries listed here will override any specified
-          # in a config file.  Prefix the list here with "+" to use
-          # these queries and those in the config file.
-          #
-          # queries: ./path/to/local/query, your-org/your-repo/queries@main
+          build-mode: ${{ matrix.build-mode }}
 
-      # Autobuild attempts to build any compiled languages (C/C++,
-      # C#, or Java).  If this step fails, then you should remove it
-      # and run the build manually (see below)
-      - name: Autobuild
-        uses: github/codeql-action/autobuild@v1
-
-      # ℹ️ Command-line programs to run using the OS shell.
-      # 📚 https://git.io/JvXDl
-
-      # ✏️ If the Autobuild fails above, remove it and uncomment the
-      # following three lines and modify them (or add more) to
-      # build your code if your project uses a compiled language:
-      # - run: |
-      #   make bootstrap
-      #   make release
+      - if: matrix.build-mode == 'manual'
+        shell: bash
+        run: |
+          echo 'If you are using a "manual" build mode for one or more of the' \
+            'languages you are analyzing, replace this with the commands to build' \
+            'your code, for example:'
+          echo '  make bootstrap'
+          echo '  make release'
+          exit 1
 
       - name: Perform CodeQL Analysis
-        uses: github/codeql-action/analyze@v1
+        uses: github/codeql-action/analyze@5d4e8d1aca955e8d8589aabd499c5cae939e33c7 # pin@v3
+        with:
+          category: "/language:${{matrix.language}}"
